...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User"
        android:checked="true" />

    <RadioButton
        android:id="@+id/rbUniversity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="University"
        android:layout_marginStart="24dp" />
    </RadioGroup>

    <!-- Username -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="Name / Username"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/rgAccountType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <!-- Password -->
    <EditText
        android:id="@+id/etPassHash"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" /> -->

    <!-- Signup Button -->
    <!--<Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="Sign Up"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/etPassHash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" /> -->

    <!-- University Vars -->
    <EditText
        android:id="@+id/etUniversityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="University Name"
        android:padding="12dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/etPassHash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/etUniversityLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Location"
        android:minHeight="56dp"
        android:padding="12dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/etUniversityName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/etUniversityWebsite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Website"
        android:inputType="textUri"
        android:minHeight="56dp"
        android:padding="12dp"
...
